# hitlab

./: .gitignore  LICENSE  README.md  hitlab.cabal
executable/: Main.hs
src/: Create.hs  Datatypes.hs  Main.hs  Pull.hs  Push.hs  Remote.hs
tests/: RemoteSpec.hs
