name:                hitlab
version:             0.1.0.0
synopsis:            Manage git repositories for student tasks
description:         Manage git repositories for student tasks
homepage:            https://github.com/obcode/hitlab
license:             BSD3
license-file:        LICENSE
author:              Oliver Braun
maintainer:          ob@obraun.net
category:            Other
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:   Create
                     Datatypes
                     Pull
                     Push
                     Remote
  hs-source-dirs:    library
  default-language:  Haskell2010
  build-depends:     base >=4.7 && <4.8,
                     bytestring >= 0.10,
                     cassava >= 0.4,
                     configurator >= 0.3,
                     directory >= 1.2,
                     logging >= 2.1,
                     optparse-applicative >= 0.11,
                     process >= 1.2,
                     text >= 1.2,
                     vector >= 0.10

executable hitlab
  hs-source-dirs:    executable
  main-is:           Main.hs
  build-depends:     base, hitlab,
                     bytestring >= 0.10,
                     cassava >= 0.4,
                     configurator >= 0.3,
                     directory >= 1.2,
                     logging >= 2.1,
                     optparse-applicative >= 0.11,
                     process >= 1.2,
                     text >= 1.2,
                     vector >= 0.10
  default-language:  Haskell2010

test-suite hspec
  type:              exitcode-stdio-1.0
  hs-source-dirs:    src tests
  main-is:           Spec.hs
  Build-depends:     base >= 4.7 && < 4.8,
                     hitlab,
                     bytestring >= 0.10,
                     cassava >= 0.4,
                     configurator >= 0.3,
                     directory >= 1.2,
                     logging >= 2.1,
                     optparse-applicative >= 0.11,
                     process >= 1.2,
                     text >= 1.2,
                     vector >= 0.10,
                     hspec >= 1.12
  default-language:  Haskell2010
  ghc-options:       -O2 -Wall -fwarn-tabs -funbox-strict-fields -threaded
                     -fno-warn-unused-do-bind

source-repository head
  type:              git
  location:          https://github.com/obcode/hitlab

